--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
   <header class="header_section">
     <div class="container-fluid">
       <nav class="navbar navbar-expand-lg custom_nav-container">
-        <a class="navbar-brand" href="index.html">
+       <a class="navbar-brand" href="index.html">
           <div class="head box-sha">
             <span class="logo-box text">
               JAMES PHONES
             </span>
             <div class="logo1">
-              <img class="logo-img" src="jamee.jpg" alt=""> 
+              <img class="min"  src="jamee.jpg" alt=""> 
             </div>
           </div>
           
