--- a/shop.html
+++ b/shop.html
@@ -51,6 +51,7 @@
                 <a href="about.html">About</a>
                 <a href="shop.html">Shop</a>
                 <a href="blog.html">Blog</a>
+                <a href="payment.html">Payment</a>
               </div>
             </div>
           </div>
@@ -73,7 +74,7 @@
       <div class="row">
         <div class="col-sm-6 col-md-4 col-lg-3">
           <div class="box">
-            <a href="">
+            <a href="payment.html">
               <div class="img-box">
                 <img class="jay" src="iphone13.png" alt="">
               </div>
@@ -98,7 +99,7 @@
         </div>
         <div class="col-sm-6 col-md-4 col-lg-3">
           <div class="box">
-            <a href="">
+            <a href="payment.html">
               <div class="img-box">
                 <img src="iphone xr.png" alt="">
               </div>
@@ -124,7 +125,7 @@
         </div>
         <div class="col-sm-6 col-md-4 col-lg-3">
           <div class="box">
-            <a href="">
+            <a href="payment.html">
               <div class="img-box">
                 <img src="13.png" alt="">
               </div>
@@ -149,7 +150,7 @@
         </div>
         <div class="col-sm-6 col-md-4 col-lg-3">
           <div class="box">
-            <a href="">
+            <a href="payment.html">
               <div class="img-box">
                 <img src="12.png" alt="">
               </div>
@@ -174,7 +175,7 @@
         </div>
         <div class="col-sm-6 col-md-4 col-lg-3">
           <div class="box">
-            <a href="">
+            <a href="payment.html">
               <div class="img-box">
                 <img src="12 pro.png" alt="">
               </div>
@@ -199,7 +200,7 @@
         </div>
         <div class="col-sm-6 col-md-4 col-lg-3">
           <div class="box">
-            <a href="">
+            <a href="payment.html">
               <div class="img-box">
                 <img src="12 pro max.png" alt="">
               </div>
@@ -224,7 +225,7 @@
         </div>
         <div class="col-sm-6 col-md-4 col-lg-3">
           <div class="box">
-            <a href="">
+            <a href="payment.html">
               <div class="img-box">
                 <img src="15.png" alt="">
               </div>
@@ -249,7 +250,7 @@
         </div>
         <div class="col-sm-6 col-md-4 col-lg-3">
           <div class="box">
-            <a href="">
+            <a href="payment.html">
               <div class="img-box">
                 <img src="13promax.png" alt="">
               </div>
@@ -323,6 +324,7 @@
               <a href="about.html">About</a>
               <a href="shop.html">Shop</a>
               <a href="blog.html">Blog</a>
+              <a href="payment.html">Payment</a>
             </div>
           </div>
         </div>
