--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <header class="header_section">
     <div class="container-fluid">
       <nav class="navbar navbar-expand-lg custom_nav-container">
-       <a class="navbar-brand" href="index.html">
+        <a class="navbar-brand" href="index.html">
           <div class="head box-sha">
             <span class="logo-box text">
               JAMES PHONES
@@ -57,6 +57,7 @@
                 <a href="about.html">About</a>
                 <a href="shop.html">Shop</a>
                 <a href="blog.html">Blog</a>
+                <a href="payment.html">Payment</a>
               </div>
             </div>
           </div>
@@ -108,7 +109,7 @@
       <div class="row">
         <div class="col-sm-6 col-md-4 col-lg-3">
           <div class="box">
-            <a href="">
+           <a href="payment.html">
               <div class="img-box">
                 <img class="jay" src="iphone13.png" alt="">
               </div>
@@ -133,7 +134,7 @@
         </div>
         <div class="col-sm-6 col-md-4 col-lg-3">
           <div class="box">
-            <a href="">
+           <a href="payment.html">
               <div class="img-box">
                 <img src="iphone xr.png" alt="">
               </div>
@@ -159,7 +160,7 @@
         </div>
         <div class="col-sm-6 col-md-4 col-lg-3">
           <div class="box">
-            <a href="">
+           <a href="payment.html">
               <div class="img-box">
                 <img src="13.png" alt="">
               </div>
@@ -184,7 +185,7 @@
         </div>
         <div class="col-sm-6 col-md-4 col-lg-3">
           <div class="box">
-            <a href="">
+           <a href="payment.html">
               <div class="img-box">
                 <img src="12.png" alt="">
               </div>
@@ -209,7 +210,7 @@
         </div>
         <div class="col-sm-6 col-md-4 col-lg-3">
           <div class="box">
-            <a href="">
+           <a href="payment.html">
               <div class="img-box">
                 <img src="12 pro.png" alt="">
               </div>
@@ -234,7 +235,7 @@
         </div>
         <div class="col-sm-6 col-md-4 col-lg-3">
           <div class="box">
-            <a href="">
+           <a href="payment.html">
               <div class="img-box">
                 <img src="12 pro max.png" alt="">
               </div>
@@ -259,7 +260,7 @@
         </div>
         <div class="col-sm-6 col-md-4 col-lg-3">
           <div class="box">
-            <a href="">
+           <a href="payment.html">
               <div class="img-box">
                 <img src="15.png" alt="">
               </div>
@@ -284,7 +285,7 @@
         </div>
         <div class="col-sm-6 col-md-4 col-lg-3">
           <div class="box">
-            <a href="">
+           <a href="payment.html">
               <div class="img-box">
                 <img src="13promax.png" alt="">
               </div>
