--- a/blog.html
+++ b/blog.html
@@ -51,6 +51,7 @@
                 <a href="about.html">About</a>
                 <a href="shop.html">Shop</a>
                 <a href="blog.html">Blog</a>
+                <a href="payment.html">Payment</a>
               </div>
             </div>
           </div>
