--- a/about.html
+++ b/about.html
@@ -51,6 +51,7 @@
                 <a href="about.html">About</a>
                 <a href="shop.html">Shop</a>
                 <a href="blog.html">Blog</a>
+                <a href="payment.html">Payment</a>
               </div>
             </div>
           </div>
@@ -213,7 +214,7 @@
     <div class="container">
       <p>
         &copy; <span id="displayYear"></span> All Rights Reserved By
-        <a href="https://html.design/">James Phones</a>
+        <a href="https://html.design/">Free Html Templates</a>
       </p>
     </div>
   </footer>
