--- a/index.html
+++ b/index.html
@@ -536,7 +536,7 @@
                   <div class="detail-box">
                     <div class="name">
                       <h6>
-                        Abereyele Moses
+                        Hawa...
                       </h6>
                     </div>
                     <p>
