--- a/index.html
+++ b/index.html
@@ -2,21 +2,28 @@
 <html>
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Explore James Phones for the best deals on smartphones and accessories. High-quality phones, unbeatable prices.">
-    <meta name="author" content="James Akeluru">
-    <meta name="keywords" content="smartphones, mobile phones, accessories, James Phones, best phone deals">
-    
-    <!-- Open Graph meta tags for better sharing -->
-    <meta property="og:title" content="James Phones - Best Smartphones and Accessories">
-    <meta property="og:description" content="Visit James Phones for the latest and greatest smartphone deals. Affordable prices and top-quality products.">
-    <meta property="og:image" content="https://raw.githubusercontent.com/Jamesakeluru/James-Phones/main/jamee.jpg">
-    <meta property="og:url" content="https://jamesakeluru.github.io/James-Phones/">
-    <meta property="og:type" content="website">
+  <!-- Basic -->
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <!-- Mobile Metas -->
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+  <!-- Site Metas -->
+  <link rel="icon" href="images/favicon.png" type="image/gif" />
+  <meta name="keywords" content="" />
+  <meta name="description" content="" />
+  <meta name="author" content="" />
 
-    <title>James Phones - Home</title>
-    <link rel="stylesheet" href="style.css">
+  <title>JAMES PHONES</title>
+
+  <!-- bootstrap core css -->
+  <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
+  <!-- font awesome style -->
+  <link href="css/font-awesome.min.css" rel="stylesheet" />
+  <!-- Custom styles for this template -->
+  <link href="css/style.css" rel="stylesheet" />
+  <!-- responsive style -->
+  <link href="css/responsive.css" rel="stylesheet" />
+
 </head>
 
 
