--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     <div class="container">
       <div class="heading_container heading_center">
         <h2>
-         Trending Phones
+         GRADE A+ UK USED PHONES
         </h2>
       </div>
       <div class="row">
@@ -121,13 +121,13 @@
                 <h6 class="gay">
                   Price
                   <span>
-                    Ghs8,700
+                    Ghs6,350
                   </span>
                 </h6>
               </div>
               <div class="new">
                 <span>
-                  New
+                  A+
                 </span>
               </div>
             </a>
@@ -146,14 +146,14 @@
                 <h6 class="gay">
                   Price
                   <span>
-                    Ghs3700
+                    Ghs2,600
                   </span>
                 </h6>
               </div>
               <div class="new">
                 
                 <span>
-                  New
+                  A+
                 </span>
               </div>
             </a>
@@ -172,13 +172,13 @@
                 <h6 class="gay">
                   Price
                   <span>
-                    Ghs 10,360
+                    Ghs 6,700
                   </span>
                 </h6>
               </div>
               <div class="new">
                 <span>
-                  New
+                  A+
                 </span>
               </div>
             </a>
@@ -197,13 +197,13 @@
                 <h6 class="gay">
                   Price
                   <span>
-                    Ghs 7,400
+                    Ghs 5,300
                   </span>
                 </h6>
               </div>
               <div class="new">
                 <span>
-                  New
+                  A+
                 </span>
               </div>
             </a>
@@ -222,13 +222,13 @@
                 <h6 class="gay">
                   Price
                   <span>
-                   GHs 9,800
+                   GHs 5,650
                   </span>
                 </h6>
               </div>
               <div class="new">
                 <span>
-                  New
+                  A+
                 </span>
               </div>
             </a>
@@ -242,18 +242,18 @@
               </div>
               <div class="detail-box">
                 <h6>
-                 Iphone 12 pro <br> Max 512gb
+                 Iphone 12 pro <br> Max 256gb
                 </h6>
                 <h6 class="gay">
                   Price
                   <span>
-                   Ghs 12,000
+                   Ghs 6700
                   </span>
                 </h6>
               </div>
               <div class="new">
                 <span>
-                  New
+                  A+
                 </span>
               </div>
             </a>
@@ -267,18 +267,18 @@
               </div>
               <div class="detail-box">
                 <h6>
-                  Iphone 15 <br> 512gb
+                  Iphone 7+ <br> 128gb
                 </h6>
                 <h6 class="gay">
                   Price
                   <span>
-                    Ghs 20,500
+                    Ghs 1,700
                   </span>
                 </h6>
               </div>
               <div class="new">
                 <span>
-                  New
+                  A+
                 </span>
               </div>
             </a>
@@ -292,18 +292,18 @@
               </div>
               <div class="detail-box">
                 <h6>
-                  Iphone 13<br> Promax  512gb
+                  Iphone 13<br> Promax  128gb
                 </h6>
                 <h6 class="gay">
                   Price
                   <span>
-                    GHs 18,700
+                    GHs 7,600
                   </span>
                 </h6>
               </div>
               <div class="new">
                 <span>
-                  New
+                  A+
                 </span>
               </div>
             </a>
