--- a/index.html
+++ b/index.html
@@ -213,11 +213,11 @@
           <div class="box">
            <a href="payment.html">
               <div class="img-box">
-                <img src="12 pro.png" alt="">
+                <img src="iphone 12 pro 2.jpg" alt="">
               </div>
               <div class="detail-box">
                 <h6>
-                  Iphone 12 pro<br>256gb
+                  Iphone 12 pro<br>128gb
                 </h6>
                 <h6 class="gay">
                   Price
@@ -238,11 +238,11 @@
           <div class="box">
            <a href="payment.html">
               <div class="img-box">
-                <img src="12 pro max.png" alt="">
+                <img src="iphone 11.jpg" alt="">
               </div>
               <div class="detail-box">
                 <h6>
-                 Iphone 12 pro <br> Max 256gb
+                 Iphone 11  <br>  128gb
                 </h6>
                 <h6 class="gay">
                   Price
@@ -288,7 +288,7 @@
           <div class="box">
            <a href="payment.html">
               <div class="img-box">
-                <img src="13promax.png" alt="">
+                <img src="iphone 13 promax.jpg" alt="">
               </div>
               <div class="detail-box">
                 <h6>
