--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <a class="navbar-brand" href="index.html">
           <div class="head box-sha">
             <span class="logo-box text">
-              JAMES PHONES
+              JAMES & MOSES PHONES
             </span>
             <div class="logo1">
               <img class="min"  src="jamee.jpg" alt=""> 
@@ -121,7 +121,7 @@
                 <h6 class="gay">
                   Price
                   <span>
-                    Ghs6,350
+                    Ghs4,300
                   </span>
                 </h6>
               </div>
@@ -146,7 +146,7 @@
                 <h6 class="gay">
                   Price
                   <span>
-                    Ghs2,600
+                    Ghs2,300
                   </span>
                 </h6>
               </div>
@@ -167,12 +167,12 @@
               </div>
               <div class="detail-box">
                 <h6>
-                  Iphone 13 <br>256gb
+                  Iphone 13 pro <br>128gb
                 </h6>
                 <h6 class="gay">
                   Price
                   <span>
-                    Ghs 6,700
+                    Ghs 6,000
                   </span>
                 </h6>
               </div>
@@ -192,12 +192,12 @@
               </div>
               <div class="detail-box">
                 <h6>
-                  Iphone 12 <br> 256gb
+                  Iphone 12 <br>64gb
                 </h6>
                 <h6 class="gay">
                   Price
                   <span>
-                    Ghs 5,300
+                    Ghs 3,100
                   </span>
                 </h6>
               </div>
@@ -222,7 +222,7 @@
                 <h6 class="gay">
                   Price
                   <span>
-                   GHs 5,650
+                   GHs 4,250
                   </span>
                 </h6>
               </div>
@@ -247,7 +247,7 @@
                 <h6 class="gay">
                   Price
                   <span>
-                   Ghs 6700
+                   Ghs 3,300
                   </span>
                 </h6>
               </div>
@@ -272,7 +272,7 @@
                 <h6 class="gay">
                   Price
                   <span>
-                    Ghs 1,700
+                    Ghs 1,500
                   </span>
                 </h6>
               </div>
@@ -297,7 +297,7 @@
                 <h6 class="gay">
                   Price
                   <span>
-                    GHs 7,600
+                    GHs 6,400
                   </span>
                 </h6>
               </div>
