--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
 
-  <title>JAMES PHONES</title>
+  <title>JAMES & MOSES PHONES</title>
 
   <!-- bootstrap core css -->
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
@@ -36,7 +36,8 @@
         <a class="navbar-brand" href="index.html">
           <div class="head box-sha">
             <span class="logo-box text">
-              JAMES & MOSES PHONES
+              JAMES & 
+              MOSES PHONES
             </span>
             <div class="logo1">
               <img class="min"  src="jamee.jpg" alt=""> 
